# PassKeyAuth

./: .gitguardian.yaml  .gitignore  Anchor.toml  Cargo.toml  Dockerfile  EVALUATION.md  README.md
.github/workflows/: ci.yml
monitoring/: README.md  docker-compose.yml
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/dashboards/: passkeyauth.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/otel-collector/: config.yaml
monitoring/prometheus/: alerts.yml  prometheus.yml
offchain/: Cargo.toml  rust-toolchain.toml
offchain/crates/api/: Cargo.toml
offchain/crates/api/src/: lib.rs
offchain/crates/core/: Cargo.toml
offchain/crates/core/src/: config.rs  engine.rs  events.rs  lib.rs  merkle.rs  ports.rs
offchain/crates/infra/: Cargo.toml
offchain/crates/infra/src/: lib.rs
offchain/crates/node/: Cargo.toml
offchain/crates/node/benches/: merkle.rs
offchain/crates/node/src/: config.rs  keeper.rs  lib.rs  main.rs  startup.rs  telemetry.rs
offchain/crates/resilience/: Cargo.toml
offchain/crates/resilience/src/: lib.rs
offchain/crates/types/: Cargo.toml
offchain/crates/types/src/: lib.rs
postman/: PassKeyAuth.postman_collection.json
programs/passkeyauth/: Cargo.toml
programs/passkeyauth/src/: constants.rs  errors.rs  lib.rs  merkle.rs  passkey.rs  state.rs
