# PassKeyAuth off-chain risk engine — its OWN cargo workspace (separate from the
# root Anchor workspace) so the heavy async/GraphQL stack resolves independently
# of the on-chain Solana crate graph.
[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Abhijeet Ashok Muneshwar <openingknots@gmail.com>"]
repository = "https://github.com/ABHIJEET-MUNESHWAR/PassKeyAuth"

[workspace.dependencies]
passkeyauth-types = { path = "crates/types" }
passkeyauth-resilience = { path = "crates/resilience" }
passkeyauth-core = { path = "crates/core" }
passkeyauth-infra = { path = "crates/infra" }
passkeyauth-api = { path = "crates/api" }

tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
async-graphql = { version = "7", features = ["chrono"] }
async-graphql-axum = "7"
axum = { version = "0.8", features = ["macros", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
parking_lot = "0.12"
dashmap = "6"
sha3 = "0.10"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
criterion = "0.5"
mockall = "0.13"
proptest = "1"

[profile.release]
lto = "thin"
codegen-units = 1
