[package]
name = "passkeyauth"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "PassKeyAuth — on-chain secp256r1 (passkey/WebAuthn) authorities plus a hash-based zero-knowledge set-membership attestation engine (issuer Merkle roots, nullifier replay protection) as an Anchor program."

[lib]
crate-type = ["cdylib", "lib"]
name = "passkeyauth"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
solana-keccak-hasher = "2.2.1"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(target_os, values("solana"))'] }
