[package]
name = "passkeyauth-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
passkeyauth-types = { workspace = true }
passkeyauth-core = { workspace = true }
async-graphql = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
passkeyauth-infra = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
