[package]
name = "passkeyauth-resilience"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
